--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta http-equiv="refresh" content="0;url=https://19259fa4-859b-4d2a-82c4-33d2cf6e4e96-00-2zyflmd5rtxa9.worf.replit.dev/" / >
+<meta http-equiv="refresh" content="0;url=https://f41b92d2-18d8-45b1-be3f-30f42c762dc6-00-8t52u9fc29m7.picard.replit.dev/personas/index.html" / >
