--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<meta http-equiv="refresh" content="0;url=https://f41b92d2-18d8-45b1-be3f-30f42c762dc6-00-8t52u9fc29m7.picard.replit.dev/personas/index.html" / >
+<meta http-equiv="refresh" content="0;url=https://c56ee6f6-b1df-4934-93e1-8e793cb3f2b5-00-2rgz23n8y2lb5.spock.replit.dev/personas/" / >
